--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
     --main-dark-color: #141516;
     --main-light-color: #F6F7F2;
     --main-light-color--tinted: rgb(246, 247, 242,.4);
+    --star-outline-color:#60A7C0;
     --primary-color: #111c40;
     --secondary-color: #DE9733;
     --nav-background-color: #2B2B2B;
@@ -40,15 +41,18 @@
 
 
 .header {
-    margin: 1rem;
+    padding: 1rem;
+    background: var(--nav-background-color);
 }
 
 .navbar {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background: var(--nav-background-color)
 
+}
+.navbar__site-logo img{
+    height: 4rem;
 }
 
 .navbar__search-bar {
@@ -61,7 +65,33 @@
     border-radius: 2px;
 
 }
+.navbar__profile-icon{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;
 
+}
+.navbar__profile-icon img {
+    height:3.5rem;
+    transition: all var(--transition-speed);
+}
+.navbar__profile-link{
+    position:absolute;
+    margin: auto;
+    color:var(--button-background-color);
+    opacity:0;
+    transform: scale(0.2);
+    transition: all var(--transition-speed);
+    pointer-events: none;
+}
+.navbar__profile-icon:hover img {
+    transform:scale(1.1) rotate(105deg);
+}
+.navbar__profile-icon:hover .navbar__profile-link {
+    opacity:1;
+    transform:scale(1) translateY(2.5rem);
+}
 .trailer-background{
     padding: 1px 0;
     background:var(--main-dark-color);
@@ -82,7 +112,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    border-radius:3px;
     overflow: hidden;
 }
 
@@ -101,9 +130,9 @@
     height: 100%;
     flex-shrink:0;
     flex:1;
+    
 
 }
-
 
 
 
@@ -113,35 +142,38 @@
     width: 5vw;
     height: 30vw;
     background: transparent;
+    cursor:pointer;
+    
     border-style: none;
     transition: background var(--transition-speed);
 
 }
 
 .trailer-buttons__arrow-icon{
-    color:var(--button-color);
+    width:1rem;
+    color:var(--main-light-color);
     transition: all var(--transition-speed);
 
 }
 .trailer-buttons__arrow--right {
-    right:0;
+    right:-5vw;
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
 
 }
 
 .trailer-buttons__arrow--left {
-    left:0;
+    left:-5vw;
     border-bottom-left-radius: 2px;
     border-top-left-radius: 2px;
 
 }
 
 .trailer-buttons__arrow:hover {
-    background: rgba(0, 0, 0, .2);
+    background: var(--main-light-color--tinted);
 }
 .trailer-buttons__arrow:hover .trailer-buttons__arrow-icon{
-    color:var(--main-light-color);
+    color:var(--button-color);
     transform:scale(1.3);
     
 } 
@@ -212,7 +244,7 @@
     position:absolute;
     display:flex;
     flex-direction:column;
-    gap:.6rem;
+    gap:.2rem;
     align-items: center;
     bottom:.5rem;
     left:1rem;
@@ -220,6 +252,9 @@
 .popular-movie__star-icon,
 .popular-movie__imdb-rating{
     color:var(--secondary-color);
+    width:2rem;
+    margin:auto;
+    text-align: center;
 
 }
 .movie-button__watchlist{
@@ -231,14 +266,23 @@
     display:flex;
     flex-direction:column;
     align-items: center;
+    justify-content: center;
     border-top-left-radius:     10px;
     border-bottom-right-radius: 10px;
     background:var(--button-background-color);
+    cursor: pointer;
 }
 .movie-button__watchlist-icon{
-    margin:auto;
+    position:absolute;
+    width:1.8rem;
     color: var(--main-button-color);
+    transition: width var(--transition-speed);
 }
+.movie-button__watchlist-icon--invisible{
+    width:0;
+
+}
+
 .movie-button__favourites{
     background:var(--main-dark-color--more-tinted);
 
@@ -247,19 +291,28 @@
     left:0rem;
 
     display:flex;
+    justify-content: center;
+    align-items: center;
     width:50px;
     height:50px;
 
     border-top-left-radius: 10px;
     border-bottom-right-radius: 30px;
 
+    cursor:pointer;
+
 }
 .movie-button__favourites-icon{
     margin:auto;
-    
+    width: 1.5rem;
+    position:absolute;
     color: var(--secondary-color);
     filter:brightness(150%);
-    transition: transform var(--transition-speed);
+    transition: transform var(--transition-speed), width var(--transition-speed);
+}
+
+.movie-button__favourites-icon--isNotInFavourites{
+    width:0;
 }
 .movie-button__favourites:hover .movie-button__favourites-icon{
     transform: scale(1.1);
