--- a/style/style.css
+++ b/style/style.css
@@ -3,15 +3,16 @@
 :root {
 
     --transition-speed: .2s;
+    --transition-slower-speed: .4s;
 
     --main-background-color: #282828;
-    --main-dark-color--tinted: rgba(20, 21, 22,.3);
-    --main-dark-color--more-tinted: rgba(20, 21, 22,.6);
-    --main-dark-color--transparent: rgba(20, 21, 22,0);
+    --main-dark-color--tinted: rgba(20, 21, 22, .3);
+    --main-dark-color--more-tinted: rgba(20, 21, 22, .6);
+    --main-dark-color--transparent: rgba(20, 21, 22, 0);
     --main-dark-color: #141516;
     --main-light-color: #F6F7F2;
-    --main-light-color--tinted: rgb(246, 247, 242,.4);
-    --star-outline-color:#60A7C0;
+    --main-light-color--tinted: rgb(246, 247, 242, .4);
+    --star-outline-color: #60A7C0;
     --primary-color: #111c40;
     --secondary-color: #DE9733;
     --nav-background-color: #2B2B2B;
@@ -33,12 +34,21 @@
     font-weight: 500;
 }
 
-.body {
-    background: var(--main-background-color);
-
+html {
+    scroll-behavior: smooth;
 }
 
+.d-none {
+    display: none;
+}
 
+.body {
+    background: var(--main-background-color);
+}
+
+.body--disable-scroll {
+    overflow: hidden;
+}
 
 .header {
     padding: 1rem;
@@ -51,10 +61,18 @@
     align-items: center;
 
 }
-.navbar__site-logo img{
-    height: 4rem;
+
+.navbar__site-logo {
+    order: 1;
 }
 
+.navbar__site-logo img {
+    height: 4rem;
+}
+.navbar__search-section{
+    order: 2;
+
+}
 .navbar__search-bar {
     width: 80vw;
     max-width: 500px;
@@ -65,44 +83,42 @@
     border-radius: 2px;
 
 }
-.navbar__profile-icon{
-    display:flex;
+
+.navbar__profile-icon {
+    order: 3;
+    display: flex;
     justify-content: center;
     align-items: center;
-    position:relative;
+    position: relative;
 
 }
+
 .navbar__profile-icon img {
-    height:3.5rem;
+    height: 3.5rem;
     transition: all var(--transition-speed);
 }
-.navbar__profile-link{
-    position:absolute;
+
+.navbar__profile-link {
+    position: absolute;
     margin: auto;
-    color:var(--button-background-color);
-    opacity:0;
+    color: var(--button-background-color);
+    opacity: 0;
     transform: scale(0.2);
     transition: all var(--transition-speed);
     pointer-events: none;
 }
-.navbar__profile-icon:hover img {
-    transform:scale(1.1) rotate(105deg);
-}
-.navbar__profile-icon:hover .navbar__profile-link {
-    opacity:1;
-    transform:scale(1) translateY(2.5rem);
-}
-.trailer-background{
+
+.trailer-background {
     padding: 1px 0;
-    background:var(--main-dark-color);
+    background: var(--main-dark-color);
 }
 
 .trailer-section {
-    position:relative;
-    width:70vw;
-    height:30vw;
-    margin:4vh auto;
-    background:var(--button-color);
+    position: relative;
+    width: 70vw;
+    height: 30vw;
+    margin: 4vh auto;
+    background: var(--button-color);
 
 }
 
@@ -119,201 +135,597 @@
 .trailer-section__carousel {
     display: flex;
     width: 500%;
-    height:100%;
+    height: 100%;
     flex-shrink: 0;
     transition: transform var(--transition-speed);
 }
 
 .slider__element {
     flex-basis: 20%;
-    width:20%;
+    width: 20%;
     height: 100%;
-    flex-shrink:0;
-    flex:1;
-    
+    flex-shrink: 0;
+    flex: 1;
+
 
 }
 
 
 
 .trailer-buttons__arrow {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     width: 5vw;
     height: 30vw;
     background: transparent;
-    cursor:pointer;
-    
+    cursor: pointer;
+
     border-style: none;
     transition: background var(--transition-speed);
 
 }
 
-.trailer-buttons__arrow-icon{
-    width:1rem;
-    color:var(--main-light-color);
+.trailer-buttons__arrow-icon {
+    width: 1rem;
+    color: var(--main-light-color);
     transition: all var(--transition-speed);
 
 }
+
 .trailer-buttons__arrow--right {
-    right:-5vw;
+    right: -5vw;
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
 
 }
 
 .trailer-buttons__arrow--left {
-    left:-5vw;
+    left: -5vw;
     border-bottom-left-radius: 2px;
     border-top-left-radius: 2px;
 
 }
 
-.trailer-buttons__arrow:hover {
-    background: var(--main-light-color--tinted);
-}
-.trailer-buttons__arrow:hover .trailer-buttons__arrow-icon{
-    color:var(--button-color);
-    transform:scale(1.3);
-    
-} 
-.popular-movies__header{
-    color:var(--main-light-color);
-    padding:1rem 0;
-    font-size:2rem;
-    text-align: center;
-}
-.popular-movies{
-    width:90vw;
-    max-width:1400px;
-    margin:auto;
+
+.popular-movies {
+    width: 90vw;
+    margin: auto;
+    opacity: 1;
+    transition: opacity var(--transition-speed);
 }
 
-.popular-movie-list{
+.popular-movies--hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.popular-movies__header,
+.search-results__header {
+    color: var(--main-light-color);
+    padding: 1rem 0;
+    font-size: 2rem;
+    text-align: center;
+}
+
+
+.popular-movies__list,
+.search-results__movie-list {
     list-style: none;
-    display:flex;
+    display: flex;
     flex-flow: row wrap;
-    gap:1rem;
+    gap: 1rem;
     justify-content: center;
     margin: .5rem auto;
-    border-radius:5px;
-    padding: 2rem 5vw;
+    border-radius: 5px;
+    padding: 2rem 2rem;
 
 }
 
-.popular-movie{
-    position:relative;
+.movie {
+    position: relative;
     background: var(--main-dark-color--transparent);
-    height:480px;
-    width:250px;
-    display:flex;
-    flex-flow:column;
+    height: 480px;
+    width: 250px;
+    display: flex;
+    flex-flow: column;
     align-items: center;
+    flex: 0 1 250px;
     border-radius: 10px;
-    transition: background var(--transition-speed), transform var(--transition-speed);
-}
-
-.popular-movie:hover{
-    transform:scale(1.05);
-    background: var(--main-dark-color--tinted);
-}
-.popular-movie__poster{
-    border-top-left-radius:10px;
-    border-top-right-radius:10px;
-    width:250px;
-    height:370px;
-
+    transition: all var(--transition-slower-speed);
 }
 
 
 
-.popular-movie__title{
+.movie__poster {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 250px;
+    height: 370px;
+}
+
+
+
+.movie__title {
+    grid-row: 2;
     pointer-events: none;
-    color:var(--main-light-color);
-    font-size:1.1rem;
+    color: var(--main-light-color);
+    font-size: 1.1rem;
     padding: .5rem .25rem;
     text-align: center;
-    width:250px;
+    width: 250px;
 }
-.popular-movie__information{
-    position:absolute;
-    width:100%;
-    height:100%;
-}
-.popular-movie__imdb-star-rating{
-    position:absolute;
-    display:flex;
-    flex-direction:column;
-    gap:.2rem;
+
+.movie__rating-star {
+    pointer-events: none;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
     align-items: center;
-    bottom:.5rem;
-    left:1rem;
+    bottom: .5rem;
+    left: 1rem;
 }
-.popular-movie__star-icon,
-.popular-movie__imdb-rating{
-    color:var(--secondary-color);
-    width:2rem;
-    margin:auto;
-    text-align: center;
+
+.movie__rating-star--detailed {
+    position: relative;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-shrink: 1;
 
 }
-.movie-button__watchlist{
-    position:absolute;
-    bottom:0;
-    right:0;
-    width:50px;
-    height:50px;
-    display:flex;
-    flex-direction:column;
+
+.movie__star-icon,
+.movie__imdb-rating {
+    color: var(--secondary-color);
+    width: 2rem;
+    margin: auto;
+    text-align: center;
+    pointer-events: none;
+}
+.movie-button__back{
+    display:none;
+}
+.movie__watchlist-section {
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-top-left-radius:     10px;
-    border-bottom-right-radius: 10px;
-    background:var(--button-background-color);
     cursor: pointer;
+
+
 }
-.movie-button__watchlist-icon{
-    position:absolute;
-    width:1.8rem;
+
+.movie-button__watchlist {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    background: var(--button-background-color);
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
+.movie-button__watchlist--small {
+    width: 50px;
+    height: 50px;
+}
+
+.movie-button__watchlist--large {
+    width: 300px;
+    align-items: flex-start;
+    padding: 0 1rem;
+}
+
+.movie-button__watchlist-icon {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 1.8rem;
     color: var(--main-button-color);
     transition: width var(--transition-speed);
 }
-.movie-button__watchlist-icon--invisible{
-    width:0;
 
+.movie-button__watchlist-icon--invisible {
+    width: 0;
 }
 
-.movie-button__favourites{
-    background:var(--main-dark-color--more-tinted);
+.movie-button__watchlist-label {
+    pointer-events: none;
+    position: relative;
+    align-self: flex-end;
+    color: var(--main-dark-color);
+}
 
-    position:absolute;
-    top:0rem;
-    left:0rem;
+.movie-button__favourites {
+    background: var(--main-dark-color--more-tinted);
 
-    display:flex;
+    position: absolute;
+    top: 0;
+
+    display: flex;
     justify-content: center;
     align-items: center;
-    width:50px;
-    height:50px;
 
-    border-top-left-radius: 10px;
-    border-bottom-right-radius: 30px;
 
-    cursor:pointer;
+
+    cursor: pointer;
 
 }
-.movie-button__favourites-icon{
-    margin:auto;
+
+.movie-button__favourites-icon {
+    pointer-events: none;
+    margin: auto;
     width: 1.5rem;
-    position:absolute;
+    position: absolute;
     color: var(--secondary-color);
-    filter:brightness(150%);
+    filter: brightness(150%);
     transition: transform var(--transition-speed), width var(--transition-speed);
 }
 
-.movie-button__favourites-icon--isNotInFavourites{
-    width:0;
+.movie-button__favourites-icon--isNotInFavourites {
+    width: 0;
 }
-.movie-button__favourites:hover .movie-button__favourites-icon{
+
+.movie-button__favourites:hover .movie-button__favourites-icon {
     transform: scale(1.1);
+}
+
+.search-results {
+    width: 90vw;
+    margin: auto;
+
+    opacity: 1;
+
+    transition: opacity var(--transition-speed);
+
+}
+
+.search-results--hidden {
+    opacity: 0;
+    pointer-events: none;
+
+}
+
+.detailed-movie__wrapper {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    pointer-events: none;
+    transition: all var(--transition-slower-speed);
+}
+
+.detailed-movie__wrapper--active {
+
+    pointer-events: all;
+    backdrop-filter: blur(2px) brightness(50%);
+    opacity: 1;
+
+}
+
+.detailed-movie__box {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 90vw;
+    height: 70vh;
+
+    display: grid;
+    grid-template-columns: 250px 2fr 3fr;
+    grid-template-rows: 370px 1fr 1fr;
+
+    border-radius: 10px;
+
+    background: var(--nav-background-color);
+
+}
+
+.detailed-movie__box .movie__poster {
+    border-radius: 0;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.detailed-movie__info-beneath-poster {
+    grid-row: 3;
+    background: var(--button-color);
+    margin: .2rem;
+    border-bottom-left-radius: 10px;
+    border: solid 2px var(--button-background-color);
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: .5rem 0;
+
+}
+
+.detailed-movie__info-next-to-poster {
+    list-style: none;
+    color: var(--secondary-color);
+    background: var(--button-color);
+    padding: 1rem 0;
+    margin: .2rem;
+    border: solid 2px var(--button-background-color);
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: flex-start;
+    grid-row: span 3;
+    text-align: center;
+
+}
+
+.detailed-movie__info-beneath-poster li,
+.detailed-movie__info-next-to-poster li {
+    color: var(--secondary-color);
+    background: var(--main-dark-color);
+    padding: .25rem .5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    border-bottom: solid 1px var(--button-background-color);
+}
+
+.detailed-movie__info-next-to-poster li:last-child {
+    border-bottom: none;
+}
+
+.list-name {
+    font-weight: 700;
+    text-align: start;
+}
+
+.list-name--header {
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+}
+
+.list-value {
+    text-align: end;
+}
+
+.list-value--sub-value {
+    width: 100%;
+    text-align: center;
+}
+
+.plot-section {
+    grid-column: 3;
+    grid-row: span 2;
+    background: var(--main-dark-color);
+    margin: .5rem;
+    border-radius: 5px;
+    border-top-right-radius: 10px;
+    padding: 1rem;
+    overflow-y: scroll;
+
+}
+
+.plot-section p {
+    color: var(--main-light-color);
+    padding: .25rem 0;
+
+}
+
+.search-results__error-msg {
+    color: var(--secondary-color);
+    padding: 1rem 0;
+    font-size: 2rem;
+    text-align: center;
+}
+
+@media(min-width: 600px) {
+
+    .navbar__profile-icon:hover img {
+        transform: scale(1.1) rotate(105deg);
+    }
+
+    .navbar__profile-icon:hover .navbar__profile-link {
+        opacity: 1;
+        transform: scale(1) translateY(2.5rem);
+    }
+
+    .trailer-buttons__arrow:hover {
+        background: var(--main-light-color--tinted);
+    }
+    
+    .trailer-buttons__arrow:hover .trailer-buttons__arrow-icon {
+        color: var(--button-color);
+        transform: scale(1.3);
+    
+    }
+    .movie-button__favourites {
+        width: 50px;
+        height: 50px;
+        border-top-left-radius: 10px;
+        border-bottom-right-radius: 30px;
+        left: 0;
+    }
+
+    .movie:hover {
+        transform: scale(1.05);
+        background: var(--main-dark-color--tinted);
+    }
+    .movie__poster{
+    pointer-events: none;
+
+    }
+}
+
+@media(max-width: 600px) {
+    .navbar {
+        flex-flow: row wrap;
+        justify-content: space-around;
+        padding: .5rem 0;
+    }
+
+    .navbar__search-section {
+        order: 3;
+        margin-top: 1.5rem;
+    }
+
+    .navbar__search-bar {
+        margin: auto;
+        font-size: 1.2rem;
+        text-align: center;
+
+    }
+
+    .navbar__profile-icon {
+        order: 2;
+    }
+
+    .trailer-section {
+        width: 70vw;
+        height: 40vw;
+        margin: 1vh auto;
+    }
+
+    .trailer-buttons__arrow {
+        height: 40vw;
+        width: 10vw;
+        background: var(--main-light-color--tinted);
+    }
+
+    .trailer-buttons__arrow--left {
+        left: -10vw;
+    }
+
+    .trailer-buttons__arrow--right {
+        right: -10vw;
+    }
+
+    .popular-movies,.search-results {
+        width: 100vw;
+    }
+
+    .popular-movies__list, 
+    .search-results__movie-list {
+        width: 100vw;
+        padding: 1rem 0;
+    }
+
+    .movie {
+        height: 120px;
+        background: var(--main-dark-color--tinted);
+        flex: 0 1 95vw;
+        flex-flow:row;
+        align-items: flex-start;
+        justify-content:flex-start;
+    }
+
+    .movie__poster-container{
+        width:100vw;
+        height:100vh;
+        margin:auto;
+    }
+    .movie__poster {
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+        object-position: center;
+    }
+    .movie__title{
+        padding:.2rem 2rem;
+    }
+    .movie__rating-star{
+        left:130px;
+    }
+    .movie-button__favourites {
+        width: 40px;
+        height: 40px;
+        border-top-right-radius: 5px;
+        border-bottom-left-radius: 15px;
+        right: 0;
+    }
+
+    .movie-button__watchlist--small {
+        width: 40px;
+        height: 40px;
+    }
+    .movie-button__watchlist--large{
+        width: 50vw;
+    }
+
+    .movie-button__watchlist-icon {
+        width: 1.4rem;
+    }
+    .movie-button__watchlist-icon--invisible{
+        width:0;
+    }
+    .movie-button__watchlist-label {
+        font-size:.9rem;
+        width:80%;
+        text-align:right;
+
+    }
+    
+    .movie-button__back {
+        display:block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 30vw;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    
+        background: var(--button-background-color);
+        border-top-right-radius: 10px;
+    
+    }
+    .detailed-movie__box{
+        height:90vh;
+        display:flex;
+        flex-flow:column;
+        overflow:scroll;
+    }
+    .detailed-movie__box .movie__poster{
+        width:90vw;
+        margin:auto;
+    }
+    .detailed-movie__box .movie__poster--enlarged{
+        position:absolute;
+        width:90vw;
+        height:auto;
+    }
+    .detailed-movie__box .movie__title{
+        width:90vw;
+        padding: 1rem 0;
+    }
+    .detailed-movie__box .plot-section{
+        max-height:20vh;
+        margin-bottom:55px;
+    }
+}
+
+@media(max-width:500px){
+
+    .detailed-movie__info-beneath-poster{
+        display:none;
+    }
 }
